--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "regexManagers": [
     {
       "datasourceTemplate": "docker",
+      "versioningTemplate": "docker",
       "fileMatch": ["^Dockerfile$"],
       "matchStrings": [
         "FROM\\s+(?<depName>.*):(?<currentValue>.*)"
