remove digests pin

--- a/renovate.json
+++ b/renovate.json
@@ -11,8 +11,7 @@
   ],
   "packageRules": [
     {
-      "matchDatasources": ["docker"],
-      "pinDigests": true
+      "matchDatasources": ["docker"]
     }
   ],
   "semanticCommits": "enabled",
